--- a/MDL-Notebook.ipynb
+++ b/MDL-Notebook.ipynb
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -2132,7 +2132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2141,7 +2141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2166,7 +2166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2175,9 +2175,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "conv2d_1 (Conv2D)            (None, 74, 74, 64)        3136      \n",
+      "_________________________________________________________________\n",
+      "conv2d_2 (Conv2D)            (None, 73, 73, 32)        8224      \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_1 (MaxPooling2 (None, 36, 36, 32)        0         \n",
+      "_________________________________________________________________\n",
+      "flatten_1 (Flatten)          (None, 41472)             0         \n",
+      "_________________________________________________________________\n",
+      "dense_1 (Dense)              (None, 64)                2654272   \n",
+      "_________________________________________________________________\n",
+      "dense_2 (Dense)              (None, 133)               8645      \n",
+      "=================================================================\n",
+      "Total params: 2,674,277\n",
+      "Trainable params: 2,674,277\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "\n",
