--- a/MDL-Notebook.ipynb
+++ b/MDL-Notebook.ipynb
@@ -2,21 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/leem/anaconda3/envs/eenlp/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  return f(*args, **kwds)\n",
-      "/home/leem/anaconda3/envs/eenlp/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  return f(*args, **kwds)\n",
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -28,7 +16,10 @@
     "import keras\n",
     "from keras.layers import Conv2D, MaxPooling2D, GlobalAveragePooling2D, Dropout, Flatten, Dense\n",
     "from keras.models import Sequential\n",
+    "from keras.callbacks import ModelCheckpoint\n",
+    "\n",
     "import numpy as np\n",
+    "\n",
     "\n"
    ]
   },
@@ -112,7 +103,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7fc561dc6cf8>"
+       "<matplotlib.collections.PathCollection at 0x7fcbd5e46cf8>"
       ]
      },
      "execution_count": 3,
@@ -147,7 +138,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7fc561cdee80>"
+       "<matplotlib.collections.PathCollection at 0x7fcbd5d5cef0>"
       ]
      },
      "execution_count": 4,
@@ -2223,7 +2214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2249,18 +2240,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_train = paths_to_tensor(img_paths[:2000]).astype('float32')/255\n",
-    "y_train = trainDf.iloc[:2000,8:]\n",
+    "training_no = 2000\n",
+    "val_no = 2000\n",
+    "x_train = paths_to_tensor(img_paths[:training_no]).astype('float32')/255\n",
+    "y_train = trainDf.iloc[:training_no,8:]\n",
+    "x_val = paths_to_tensor(img_paths[training_no:training_no+val_no]).astype('float32')/255\n",
+    "y_val = trainDf.iloc[training_no:training_no+val_no,8:]\n",
+    "\n",
     "#print(y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -2270,19 +2266,19 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "conv2d_24 (Conv2D)           (None, 49, 49, 64)        2368      \n",
+      "conv2d_1 (Conv2D)            (None, 49, 49, 64)        2368      \n",
       "_________________________________________________________________\n",
-      "conv2d_25 (Conv2D)           (None, 45, 45, 32)        51232     \n",
+      "conv2d_2 (Conv2D)            (None, 45, 45, 32)        51232     \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_12 (MaxPooling (None, 9, 9, 32)          0         \n",
+      "max_pooling2d_1 (MaxPooling2 (None, 9, 9, 32)          0         \n",
       "_________________________________________________________________\n",
-      "flatten_12 (Flatten)         (None, 2592)              0         \n",
+      "flatten_1 (Flatten)          (None, 2592)              0         \n",
       "_________________________________________________________________\n",
-      "dense_34 (Dense)             (None, 64)                165952    \n",
+      "dense_1 (Dense)              (None, 64)                165952    \n",
       "_________________________________________________________________\n",
-      "dense_35 (Dense)             (None, 64)                4160      \n",
+      "dense_2 (Dense)              (None, 64)                4160      \n",
       "_________________________________________________________________\n",
-      "dense_36 (Dense)             (None, 41)                2665      \n",
+      "dense_3 (Dense)              (None, 41)                2665      \n",
       "=================================================================\n",
       "Total params: 226,377\n",
       "Trainable params: 226,377\n",
@@ -2306,12 +2302,13 @@
     "\n",
     "model.add(Dense(len(y_train.columns), activation='sigmoid'))\n",
     "model.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
-    "model.summary()"
+    "model.summary()\n",
+    "weightsFilePath=\"weights.best.hdf5\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -2330,30 +2327,214 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Train on 2000 samples, validate on 2000 samples\n",
       "Epoch 1/30\n",
-      "2000/2000 [==============================] - 5s 2ms/step - loss: 0.3765 - acc: 0.8306\n",
+      "2000/2000 [==============================] - 9s 4ms/step - loss: 0.3820 - acc: 0.8282 - val_loss: 0.3456 - val_acc: 0.8470\n",
+      "\n",
+      "Epoch 00001: val_acc improved from -inf to 0.84698, saving model to weights.best.hdf5\n",
       "Epoch 2/30\n",
-      "2000/2000 [==============================] - 4s 2ms/step - loss: 0.3448 - acc: 0.8512\n",
+      "2000/2000 [==============================] - 5s 2ms/step - loss: 0.3461 - acc: 0.8499 - val_loss: 0.3388 - val_acc: 0.8492\n",
+      "\n",
+      "Epoch 00002: val_acc improved from 0.84698 to 0.84921, saving model to weights.best.hdf5\n",
       "Epoch 3/30\n",
-      "2000/2000 [==============================] - 4s 2ms/step - loss: 0.3345 - acc: 0.8550\n",
+      "2000/2000 [==============================] - 5s 2ms/step - loss: 0.3406 - acc: 0.8530 - val_loss: 0.3410 - val_acc: 0.8555\n",
+      "\n",
+      "Epoch 00003: val_acc improved from 0.84921 to 0.85548, saving model to weights.best.hdf5\n",
       "Epoch 4/30\n",
-      "2000/2000 [==============================] - 4s 2ms/step - loss: 0.3296 - acc: 0.8572\n",
+      "2000/2000 [==============================] - 5s 2ms/step - loss: 0.3332 - acc: 0.8574 - val_loss: 0.3295 - val_acc: 0.8576\n",
+      "\n",
+      "Epoch 00004: val_acc improved from 0.85548 to 0.85765, saving model to weights.best.hdf5\n",
       "Epoch 5/30\n",
-      "2000/2000 [==============================] - 4s 2ms/step - loss: 0.3260 - acc: 0.8585\n",
+      "2000/2000 [==============================] - 5s 2ms/step - loss: 0.3270 - acc: 0.8583 - val_loss: 0.3326 - val_acc: 0.8559\n",
+      "\n",
+      "Epoch 00005: val_acc did not improve from 0.85765\n",
       "Epoch 6/30\n",
-      "1456/2000 [====================>.........] - ETA: 1s - loss: 0.3208 - acc: 0.8607"
+      "2000/2000 [==============================] - 5s 3ms/step - loss: 0.3224 - acc: 0.8610 - val_loss: 0.3296 - val_acc: 0.8564\n",
+      "\n",
+      "Epoch 00006: val_acc did not improve from 0.85765\n",
+      "Epoch 7/30\n",
+      "2000/2000 [==============================] - 5s 3ms/step - loss: 0.3181 - acc: 0.8634 - val_loss: 0.3264 - val_acc: 0.8595\n",
+      "\n",
+      "Epoch 00007: val_acc improved from 0.85765 to 0.85950, saving model to weights.best.hdf5\n",
+      "Epoch 8/30\n",
+      "2000/2000 [==============================] - 5s 2ms/step - loss: 0.3146 - acc: 0.8644 - val_loss: 0.3279 - val_acc: 0.8588\n",
+      "\n",
+      "Epoch 00008: val_acc did not improve from 0.85950\n",
+      "Epoch 9/30\n",
+      "2000/2000 [==============================] - 5s 2ms/step - loss: 0.3094 - acc: 0.8672 - val_loss: 0.3309 - val_acc: 0.8568\n",
+      "\n",
+      "Epoch 00009: val_acc did not improve from 0.85950\n",
+      "Epoch 10/30\n",
+      "2000/2000 [==============================] - 5s 2ms/step - loss: 0.3038 - acc: 0.8702 - val_loss: 0.3340 - val_acc: 0.8548\n",
+      "\n",
+      "Epoch 00010: val_acc did not improve from 0.85950\n",
+      "Epoch 11/30\n",
+      "2000/2000 [==============================] - 5s 2ms/step - loss: 0.2988 - acc: 0.8717 - val_loss: 0.3362 - val_acc: 0.8555\n",
+      "\n",
+      "Epoch 00011: val_acc did not improve from 0.85950\n",
+      "Epoch 12/30\n",
+      "2000/2000 [==============================] - 5s 2ms/step - loss: 0.2912 - acc: 0.8757 - val_loss: 0.3417 - val_acc: 0.8533\n",
+      "\n",
+      "Epoch 00012: val_acc did not improve from 0.85950\n",
+      "Epoch 13/30\n",
+      "2000/2000 [==============================] - 5s 2ms/step - loss: 0.2842 - acc: 0.8789 - val_loss: 0.3466 - val_acc: 0.8553\n",
+      "\n",
+      "Epoch 00013: val_acc did not improve from 0.85950\n",
+      "Epoch 14/30\n",
+      "2000/2000 [==============================] - 5s 2ms/step - loss: 0.2745 - acc: 0.8823 - val_loss: 0.3571 - val_acc: 0.8506\n",
+      "\n",
+      "Epoch 00014: val_acc did not improve from 0.85950\n",
+      "Epoch 15/30\n",
+      "2000/2000 [==============================] - 5s 3ms/step - loss: 0.2666 - acc: 0.8865 - val_loss: 0.3679 - val_acc: 0.8467\n",
+      "\n",
+      "Epoch 00015: val_acc did not improve from 0.85950\n",
+      "Epoch 16/30\n",
+      "2000/2000 [==============================] - 5s 3ms/step - loss: 0.2587 - acc: 0.8898 - val_loss: 0.3772 - val_acc: 0.8488\n",
+      "\n",
+      "Epoch 00016: val_acc did not improve from 0.85950\n",
+      "Epoch 17/30\n",
+      "2000/2000 [==============================] - 5s 3ms/step - loss: 0.2473 - acc: 0.8946 - val_loss: 0.3964 - val_acc: 0.8444\n",
+      "\n",
+      "Epoch 00017: val_acc did not improve from 0.85950\n",
+      "Epoch 18/30\n",
+      "2000/2000 [==============================] - 5s 3ms/step - loss: 0.2379 - acc: 0.8992 - val_loss: 0.3937 - val_acc: 0.8434\n",
+      "\n",
+      "Epoch 00018: val_acc did not improve from 0.85950\n",
+      "Epoch 19/30\n",
+      "2000/2000 [==============================] - 5s 3ms/step - loss: 0.2258 - acc: 0.9058 - val_loss: 0.4086 - val_acc: 0.8446\n",
+      "\n",
+      "Epoch 00019: val_acc did not improve from 0.85950\n",
+      "Epoch 20/30\n",
+      "2000/2000 [==============================] - 5s 3ms/step - loss: 0.2156 - acc: 0.9094 - val_loss: 0.4210 - val_acc: 0.8325\n",
+      "\n",
+      "Epoch 00020: val_acc did not improve from 0.85950\n",
+      "Epoch 21/30\n",
+      "2000/2000 [==============================] - 5s 3ms/step - loss: 0.2111 - acc: 0.9111 - val_loss: 0.4346 - val_acc: 0.8376\n",
+      "\n",
+      "Epoch 00021: val_acc did not improve from 0.85950\n",
+      "Epoch 22/30\n",
+      "2000/2000 [==============================] - 5s 3ms/step - loss: 0.2004 - acc: 0.9156 - val_loss: 0.4416 - val_acc: 0.8377\n",
+      "\n",
+      "Epoch 00022: val_acc did not improve from 0.85950\n",
+      "Epoch 23/30\n",
+      "2000/2000 [==============================] - 5s 3ms/step - loss: 0.1904 - acc: 0.9201 - val_loss: 0.4677 - val_acc: 0.8354\n",
+      "\n",
+      "Epoch 00023: val_acc did not improve from 0.85950\n",
+      "Epoch 24/30\n",
+      "2000/2000 [==============================] - 5s 3ms/step - loss: 0.1838 - acc: 0.9237 - val_loss: 0.4733 - val_acc: 0.8321\n",
+      "\n",
+      "Epoch 00024: val_acc did not improve from 0.85950\n",
+      "Epoch 25/30\n",
+      "2000/2000 [==============================] - 5s 3ms/step - loss: 0.1724 - acc: 0.9294 - val_loss: 0.5187 - val_acc: 0.8337\n",
+      "\n",
+      "Epoch 00025: val_acc did not improve from 0.85950\n",
+      "Epoch 26/30\n",
+      "2000/2000 [==============================] - 5s 3ms/step - loss: 0.1641 - acc: 0.9324 - val_loss: 0.5306 - val_acc: 0.8337\n",
+      "\n",
+      "Epoch 00026: val_acc did not improve from 0.85950\n",
+      "Epoch 27/30\n",
+      "2000/2000 [==============================] - 5s 3ms/step - loss: 0.1549 - acc: 0.9373 - val_loss: 0.5448 - val_acc: 0.8304\n",
+      "\n",
+      "Epoch 00027: val_acc did not improve from 0.85950\n",
+      "Epoch 28/30\n",
+      "2000/2000 [==============================] - 5s 3ms/step - loss: 0.1476 - acc: 0.9401 - val_loss: 0.5992 - val_acc: 0.8302\n",
+      "\n",
+      "Epoch 00028: val_acc did not improve from 0.85950\n",
+      "Epoch 29/30\n",
+      "2000/2000 [==============================] - 5s 3ms/step - loss: 0.1408 - acc: 0.9433 - val_loss: 0.5950 - val_acc: 0.8291\n",
+      "\n",
+      "Epoch 00029: val_acc did not improve from 0.85950\n",
+      "Epoch 30/30\n",
+      "2000/2000 [==============================] - 5s 3ms/step - loss: 0.1322 - acc: 0.9463 - val_loss: 0.6172 - val_acc: 0.8267\n",
+      "\n",
+      "Epoch 00030: val_acc did not improve from 0.85950\n"
      ]
     }
    ],
    "source": [
-    "model.fit(x_train,y_train, epochs = 30, batch_size=16)"
+    "checkpoint = ModelCheckpoint(weightsFilePath, monitor='val_acc', verbose=1, save_best_only=True, mode='max')\n",
+    "\n",
+    "history = model.fit(x_train,y_train, epochs = 30, batch_size=16, validation_data=(x_val, y_val), callbacks=[checkpoint])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.load_weights(weightsFilePath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions = model.predict(x_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.8595, 11521, 82000)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def checkAcc(predictions, truths):\n",
+    "    wrongs = 0\n",
+    "    for i,prediction in enumerate(predictions):\n",
+    "        truth = truths[i]\n",
+    "        for j, val in enumerate(prediction):\n",
+    "            if val >= 0.5 and truth[j] == 0:\n",
+    "                wrongs += 1\n",
+    "                # break\n",
+    "            if val < 0.5 and truth[j] == 1:\n",
+    "                wrongs += 1\n",
+    "                # break\n",
+    "    total = 41*len(predictions) # len(predictions)\n",
+    "    return (total - wrongs) / total, wrongs, total\n",
+    "                \n",
+    "            \n",
+    "checkAcc(predictions, y_val.values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2000, 41)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_val.values.shape"
    ]
   },
   {
