--- a/MDL-Notebook.ipynb
+++ b/MDL-Notebook.ipynb
@@ -2077,8 +2077,7 @@
     "    # convert PIL.Image.Image type to 3D tensor with shape (x, x, 1)\n",
     "    x = image.img_to_array(img)\n",
     "    data = np.asarray( img, dtype=\"int32\" )\n",
-    "    # convert 2D tensor to 3D tensor with shape (1, X, x) and return 3D tensor\n",
-    "    #data = data.reshape(inputSize[0],inputSize[1],1)\n",
+    "    # convert 2D tensor to 3D tensor with shape (X, x, 3) and return 3D tensor\n",
     "    return np.stack((data,)*3, axis=-1)\n",
     "\n",
     "\n",
@@ -2112,6 +2111,8 @@
     "# Create balanced dataset with 50% pos examples and 50% neg examples, only take frontal scans for now\n",
     "pos = trainDf[(trainDf[colName] == 1) & (trainDf['Frontal1/Lateral0'] == 1 )]\n",
     "neg = trainDf[(trainDf[colName] == 0) & (trainDf['Frontal1/Lateral0'] == 1 )]\n",
+    "\n",
+    "# Deleting training dataframe in order to save memory and avoid OOM errors. \n",
     "del trainDf"
    ]
   },
@@ -2130,6 +2131,9 @@
     "\n",
     "x_train_paths, x_val_paths, y_train, y_val = train_test_split(sample.Path, sample[colName], stratify=sample[colName], random_state =2)\n",
     "\n",
+    "\n",
+    "# The 3 channel option is required for the denseNet and other transfer learning models\n",
+    "# Single channel can be used on our models\n",
     "\n",
     "#x_train = paths_to_tensor(x_train_paths,inputSize)#.astype('float32')/255\n",
     "x_train3Channel = paths_to_tensor_channel_last_3colour(x_train_paths,inputSize)#.astype('float32')/255\n",
@@ -2329,7 +2333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -2341,7 +2345,9 @@
       "=================================================================\n",
       "densenet121 (Model)          (None, 1000)              8062504   \n",
       "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 1)                 1001      \n",
+      "dropout_1 (Dropout)          (None, 1000)              0         \n",
+      "_________________________________________________________________\n",
+      "dense_2 (Dense)              (None, 1)                 1001      \n",
       "=================================================================\n",
       "Total params: 8,063,505\n",
       "Trainable params: 1,001\n",
@@ -2360,11 +2366,12 @@
     "#model.add(Dense(32,activation='relu'))\n",
     "#model.add(Dropout(0.2))\n",
     "#model.add(Dense(16,activation='relu'))\n",
-    "#model.add(Dropout(0.2))\n",
+    "\n",
+    "# Turn off the trainability of the transfer model to save computational resource/memory\n",
     "for layer in model2.layers:\n",
     "    layer.trainable=False\n",
     "\n",
-    "\n",
+    "model2.add(Dropout(0.3))\n",
     "model2.add(Dense(1, activation='sigmoid'))\n",
     "model2.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
     "model2.summary()\n",
@@ -2382,23 +2389,43 @@
      "text": [
       "Train on 750 samples, validate on 250 samples\n",
       "Epoch 1/10\n",
-      "750/750 [==============================] - 37s 50ms/step - loss: 0.6930 - acc: 0.5120 - val_loss: 0.6933 - val_acc: 0.5280\n",
+      "750/750 [==============================] - 32s 43ms/step - loss: 0.6931 - acc: 0.5240 - val_loss: 0.6952 - val_acc: 0.4720\n",
       "\n",
-      "Epoch 00001: val_acc improved from -inf to 0.52800, saving model to weights2.best.hdf5\n",
+      "Epoch 00001: val_acc improved from -inf to 0.47200, saving model to weights2.best.hdf5\n",
       "Epoch 2/10\n",
-      "750/750 [==============================] - 23s 31ms/step - loss: 0.6926 - acc: 0.5347 - val_loss: 0.6937 - val_acc: 0.5040\n",
+      "750/750 [==============================] - 24s 32ms/step - loss: 0.6925 - acc: 0.5920 - val_loss: 0.6956 - val_acc: 0.4880\n",
       "\n",
-      "Epoch 00002: val_acc did not improve from 0.52800\n",
+      "Epoch 00002: val_acc improved from 0.47200 to 0.48800, saving model to weights2.best.hdf5\n",
       "Epoch 3/10\n",
-      "750/750 [==============================] - 24s 32ms/step - loss: 0.6921 - acc: 0.5800 - val_loss: 0.6941 - val_acc: 0.4560\n",
+      "750/750 [==============================] - 24s 32ms/step - loss: 0.6924 - acc: 0.5933 - val_loss: 0.6961 - val_acc: 0.4560\n",
       "\n",
-      "Epoch 00003: val_acc did not improve from 0.52800\n",
+      "Epoch 00003: val_acc did not improve from 0.48800\n",
       "Epoch 4/10\n",
-      "750/750 [==============================] - 24s 32ms/step - loss: 0.6916 - acc: 0.6200 - val_loss: 0.6944 - val_acc: 0.4520\n",
+      "750/750 [==============================] - 24s 32ms/step - loss: 0.6918 - acc: 0.6333 - val_loss: 0.6965 - val_acc: 0.4560\n",
       "\n",
-      "Epoch 00004: val_acc did not improve from 0.52800\n",
+      "Epoch 00004: val_acc did not improve from 0.48800\n",
       "Epoch 5/10\n",
-      "704/750 [===========================>..] - ETA: 1s - loss: 0.6913 - acc: 0.6662"
+      "750/750 [==============================] - 24s 32ms/step - loss: 0.6913 - acc: 0.6680 - val_loss: 0.6967 - val_acc: 0.4720\n",
+      "\n",
+      "Epoch 00005: val_acc did not improve from 0.48800\n",
+      "Epoch 6/10\n",
+      "750/750 [==============================] - 23s 31ms/step - loss: 0.6910 - acc: 0.6627 - val_loss: 0.6972 - val_acc: 0.4720\n",
+      "\n",
+      "Epoch 00006: val_acc did not improve from 0.48800\n",
+      "Epoch 7/10\n",
+      "750/750 [==============================] - 24s 32ms/step - loss: 0.6906 - acc: 0.6707 - val_loss: 0.6975 - val_acc: 0.4200\n",
+      "\n",
+      "Epoch 00007: val_acc did not improve from 0.48800\n",
+      "Epoch 8/10\n",
+      "750/750 [==============================] - 23s 31ms/step - loss: 0.6901 - acc: 0.6827 - val_loss: 0.6980 - val_acc: 0.4080\n",
+      "\n",
+      "Epoch 00008: val_acc did not improve from 0.48800\n",
+      "Epoch 9/10\n",
+      "750/750 [==============================] - 23s 31ms/step - loss: 0.6900 - acc: 0.6760 - val_loss: 0.6984 - val_acc: 0.4200\n",
+      "\n",
+      "Epoch 00009: val_acc did not improve from 0.48800\n",
+      "Epoch 10/10\n",
+      "480/750 [==================>...........] - ETA: 6s - loss: 0.6900 - acc: 0.6792"
      ]
     }
    ],
