Slightly increased the sample size to max i could get running without OOM

--- a/MDL-Notebook.ipynb
+++ b/MDL-Notebook.ipynb
@@ -135,7 +135,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7f80c69e2278>"
+       "<matplotlib.collections.PathCollection at 0x7f373e4061d0>"
       ]
      },
      "execution_count": 4,
@@ -170,7 +170,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7f80c697bb00>"
+       "<matplotlib.collections.PathCollection at 0x7f373e399828>"
       ]
      },
      "execution_count": 5,
@@ -2112,7 +2112,7 @@
    "source": [
     "inputSize = (224,224)\n",
     "\n",
-    "sample_size = 1000\n",
+    "sample_size = 6000\n",
     "targetColumn = [6]\n",
     "colName = trainDf.columns.tolist()[targetColumn[0]]\n",
     "print(f\"This model will be targetting {colName} column\")\n",
@@ -2123,7 +2123,7 @@
     "neg = trainDf[(trainDf[colName] == 0) & (trainDf['Frontal1/Lateral0'] == 1 )]\n",
     "\n",
     "# Deleting training dataframe in order to save memory and avoid OOM errors. \n",
-    "del trainDf"
+    "#del trainDf"
    ]
   },
   {
@@ -2243,9 +2243,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'weightsFilePath' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-12-d372b764b282>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcheckpoint\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mModelCheckpoint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mweightsFilePath\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmonitor\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'val_acc'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msave_best_only\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'max'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mhistory\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_train\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mepochs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m32\u001b[0m\u001b[0;34m,\u001b[0m  \u001b[0mvalidation_data\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_val\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_val\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcallbacks\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcheckpoint\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_weights\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mweightsFilePath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'weightsFilePath' is not defined"
+     ]
+    }
+   ],
    "source": [
     "checkpoint = ModelCheckpoint(weightsFilePath, monitor='val_acc', verbose=1, save_best_only=True, mode='max')\n",
     "\n",
@@ -2304,9 +2316,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(250,)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "y_val.values.shape"
    ]
@@ -2367,47 +2390,47 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train on 750 samples, validate on 250 samples\n",
+      "Train on 4500 samples, validate on 1500 samples\n",
       "Epoch 1/10\n",
-      "750/750 [==============================] - 39s 52ms/step - loss: 0.6932 - acc: 0.4787 - val_loss: 0.6917 - val_acc: 0.5400\n",
+      "4500/4500 [==============================] - 154s 34ms/step - loss: 0.6923 - acc: 0.5647 - val_loss: 0.6963 - val_acc: 0.4680\n",
       "\n",
-      "Epoch 00001: val_acc improved from -inf to 0.54000, saving model to weights2.best.hdf5\n",
+      "Epoch 00001: val_acc improved from -inf to 0.46800, saving model to weights2.best.hdf5\n",
       "Epoch 2/10\n",
-      "750/750 [==============================] - 23s 31ms/step - loss: 0.6928 - acc: 0.5587 - val_loss: 0.6914 - val_acc: 0.5600\n",
+      "4500/4500 [==============================] - 138s 31ms/step - loss: 0.6906 - acc: 0.6402 - val_loss: 0.6970 - val_acc: 0.4720\n",
       "\n",
-      "Epoch 00002: val_acc improved from 0.54000 to 0.56000, saving model to weights2.best.hdf5\n",
+      "Epoch 00002: val_acc improved from 0.46800 to 0.47200, saving model to weights2.best.hdf5\n",
       "Epoch 3/10\n",
-      "750/750 [==============================] - 23s 31ms/step - loss: 0.6924 - acc: 0.5667 - val_loss: 0.6913 - val_acc: 0.5320\n",
+      "4500/4500 [==============================] - 138s 31ms/step - loss: 0.6891 - acc: 0.6373 - val_loss: 0.6970 - val_acc: 0.4793\n",
       "\n",
-      "Epoch 00003: val_acc did not improve from 0.56000\n",
+      "Epoch 00003: val_acc improved from 0.47200 to 0.47933, saving model to weights2.best.hdf5\n",
       "Epoch 4/10\n",
-      "750/750 [==============================] - 23s 31ms/step - loss: 0.6921 - acc: 0.5920 - val_loss: 0.6911 - val_acc: 0.5320\n",
+      "4500/4500 [==============================] - 138s 31ms/step - loss: 0.6871 - acc: 0.6500 - val_loss: 0.6970 - val_acc: 0.4833\n",
       "\n",
-      "Epoch 00004: val_acc did not improve from 0.56000\n",
+      "Epoch 00004: val_acc improved from 0.47933 to 0.48333, saving model to weights2.best.hdf5\n",
       "Epoch 5/10\n",
-      "750/750 [==============================] - 23s 31ms/step - loss: 0.6916 - acc: 0.6440 - val_loss: 0.6909 - val_acc: 0.5600\n",
+      "4500/4500 [==============================] - 138s 31ms/step - loss: 0.6858 - acc: 0.6480 - val_loss: 0.6976 - val_acc: 0.4907\n",
       "\n",
-      "Epoch 00005: val_acc did not improve from 0.56000\n",
+      "Epoch 00005: val_acc improved from 0.48333 to 0.49067, saving model to weights2.best.hdf5\n",
       "Epoch 6/10\n",
-      "750/750 [==============================] - 23s 31ms/step - loss: 0.6912 - acc: 0.6387 - val_loss: 0.6907 - val_acc: 0.5520\n",
+      "4500/4500 [==============================] - 138s 31ms/step - loss: 0.6842 - acc: 0.6473 - val_loss: 0.6991 - val_acc: 0.4820\n",
       "\n",
-      "Epoch 00006: val_acc did not improve from 0.56000\n",
+      "Epoch 00006: val_acc did not improve from 0.49067\n",
       "Epoch 7/10\n",
-      "750/750 [==============================] - 23s 31ms/step - loss: 0.6907 - acc: 0.6573 - val_loss: 0.6906 - val_acc: 0.5440\n",
+      "4500/4500 [==============================] - 138s 31ms/step - loss: 0.6827 - acc: 0.6513 - val_loss: 0.6996 - val_acc: 0.4820\n",
       "\n",
-      "Epoch 00007: val_acc did not improve from 0.56000\n",
+      "Epoch 00007: val_acc did not improve from 0.49067\n",
       "Epoch 8/10\n",
-      "750/750 [==============================] - 24s 31ms/step - loss: 0.6904 - acc: 0.6613 - val_loss: 0.6903 - val_acc: 0.5400\n",
+      "4500/4500 [==============================] - 138s 31ms/step - loss: 0.6812 - acc: 0.6491 - val_loss: 0.7010 - val_acc: 0.4840\n",
       "\n",
-      "Epoch 00008: val_acc did not improve from 0.56000\n",
+      "Epoch 00008: val_acc did not improve from 0.49067\n",
       "Epoch 9/10\n",
-      "750/750 [==============================] - 23s 31ms/step - loss: 0.6901 - acc: 0.6613 - val_loss: 0.6901 - val_acc: 0.5560\n",
+      "4500/4500 [==============================] - 138s 31ms/step - loss: 0.6797 - acc: 0.6516 - val_loss: 0.7023 - val_acc: 0.4820\n",
       "\n",
-      "Epoch 00009: val_acc did not improve from 0.56000\n",
+      "Epoch 00009: val_acc did not improve from 0.49067\n",
       "Epoch 10/10\n",
-      "750/750 [==============================] - 23s 31ms/step - loss: 0.6898 - acc: 0.6480 - val_loss: 0.6900 - val_acc: 0.5560\n",
+      "4500/4500 [==============================] - 138s 31ms/step - loss: 0.6783 - acc: 0.6536 - val_loss: 0.7042 - val_acc: 0.4813\n",
       "\n",
-      "Epoch 00010: val_acc did not improve from 0.56000\n"
+      "Epoch 00010: val_acc did not improve from 0.49067\n"
      ]
     }
    ],
